syntax = "proto3";

package userpb;

option go_package = "./";

service UserService {
    rpc UserLogin (LoginRequest) returns (CommonResponse);
    rpc UserSignup (SignupRequest) returns (CommonResponse);
    rpc UserProfile (UserID) returns (Profile);
    rpc UserProfileUpdate(ProfileUpdate) returns (Profile);

    rpc UserFetchDoctorByID(UDoctorID) returns(UDoctorModel);
    rpc UserFetchDoctorByName(UDoctorName) returns (UDoctorModel);
    rpc UserFetchAllDoctors(UNoParam) returns (UDoctorList);

}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message CommonResponse {
    string status = 1;
    string error = 2;
    string message = 3;
}

message SignupRequest {
    string firstname = 1;
    string lastname = 2;
    string dob = 3;
    string gender = 4;
    string email = 5;
    string phone = 6;
    string address = 7;
    string password = 8;
}

message UserID {
    uint32 id = 1;
}

message Profile {
    string firstname = 1;
    string lastname = 2;
    string username = 3;
    string dob = 4;
    string gender = 5;
    string email = 6;
    string phone = 7;
    string address = 8;
} 

message ProfileUpdate {
    uint32 userid = 1;
    string firstname = 2;
    string lastname = 3;
    string username = 4;
    string dob = 5;
    string gender = 6;
    string phone = 7;
    string address = 8;
}

message UNoParam{}

message UDoctorModel {
    string doctor_name = 1;
    uint64 age = 2;
    string speciality = 3;
    string gender = 4;
    string email = 5;
}

message UDoctorID {
    uint32 id = 1;
}

message UDoctorName {
    string name = 1;
}

message UDoctorList {
    repeated UDoctorModel doctors = 1;
}